--- a/style.css
+++ b/style.css
@@ -1,56 +1,10 @@
 /* Basic Style */
-body {
-  background-color: #f8f8f8;
-  color: #333;
-  font-family: Lato, sans-serif;
-}
-
-.aaa {
-  width: 500px;
-  margin: 0 auto;
-  display: block;
-  text-align: right;
-}
-
-.aaa img {
-  width: 100%;
-}
-
-.aaa .more_inf {
-  font-family: fantasy, cursive;
-}
-
-@media screen and (max-width:768px) {
-
-  .aaa { 
-    text-align: center;
-  }
-
-}
-
-.centered-main-page-element {
-  display: block;
-  width: 500px;
-  margin: 0 auto;
-}
-
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
-}
-
-.task-row-wrapper {
-  display: flex;
-}
-
 ul {
   margin: 0;
   padding: 0px;
 }
 
-li,
-h3 {
+li {
   list-style: none;
 }
 
@@ -59,7 +13,46 @@ button {
   outline: none;
 }
 
-button {
+body {
+  background-color: #f8f8f8;
+  color: #333;
+  font-family: Lato, sans-serif;
+}
+
+.header {
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
+}
+
+.header__img {
+  width: 100%;
+}
+
+.header__link {
+  font-family: fantasy, cursive;
+}
+
+.main {
+  display: block;
+  width: 500px;
+  margin: 0 auto;
+}
+
+.list-item__input-text.list-item__input-text_new-task {
+  display: flex;
+  width: 318px;  
+}
+
+.list-item__input-text,
+.list-item__label {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
+}
+
+.list-item__button {
   background: none;
   border: 0px;
   color: #888;
@@ -69,13 +62,12 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.list-item__button:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.section-title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +77,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.list-item__input-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,22 +90,24 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.list-item__input-text:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+/* label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
-}
+} */
 
-input#new-task {
+/* add-task__input */
+
+/* input#new-task {
   width: 318px;
-}
+} */
 
 /* Task list */
-li {
+.section__list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -122,51 +116,63 @@ li {
   align-items: center;
 }
 
-li > * {
+.section__list-item_no-border {
+  border-bottom: none;
+}
+
+.section__list-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.list-item__intup-checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.list-item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.list-item__input-text {
   width: 226px;
 }
 
-button.delete img {
+.list-item__img {  
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.list-item__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.section__list_completed-tasks .list-item__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list-item__input-text {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+.section__list-item_edit-mode .list-item__input-text {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.section__list-item_edit-mode .list-item__label {
   display: none;
+}
+
+@media screen and (max-width: 768px) {
+
+  .header { 
+    text-align: center;
+  }
+
 }
